--- a/src/components/modules/AnchorNavigation.astro
+++ b/src/components/modules/AnchorNavigation.astro
@@ -8,7 +8,7 @@
         after:content-[''] after:absolute after:bottom-0 after:left-0 after:right-0 after:border-t after:border-gray-300 after:w-screen
         ">
             <li>
-                <a href="#cases" class="block py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">Case studies</a>
+                <a href="#cases" class="block py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">Projekte</a>
             </li>
             <li>
                 <a href="#skills" class="block py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">Skills</a>
