--- a/src/components/partials/Image.astro
+++ b/src/components/partials/Image.astro
@@ -38,4 +38,5 @@ theSizes = theSizes.slice(0, -1);
         formats={['avif', 'webp']}
         fetchpriority={fetchPriority}
         fallbackFormat="jpg"
+        class={className}
 />
