--- a/src/components/modules/CaseStudies.astro
+++ b/src/components/modules/CaseStudies.astro
@@ -11,7 +11,7 @@ const swiperSettings = {
     slidesPerView: 1,
     spaceBetween: 20,
     autoplay: {
-        delay: 10000000
+        delay: 10000
     },
     pagination: {
         el: '.swiper-pagination',
@@ -49,7 +49,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
 ---
 <section class="case-studies module overflow-hidden" id="cases" aria-labelledby="case-studies-title" role="region">
     <div class="grid relative">
-        <h2 data-scroll-reveal id="case-studies-title" class="col-span-full mb-20">Case Studies</h2>
+        <h2 data-scroll-reveal id="case-studies-title" class="col-span-full mb-20">Projekte</h2>
         <em data-scroll-reveal class="col-span-full h4 not-italic font-light mb-10 lg:absolute lg:top-640 lg-left-0">Featured</em>
         <div class="col-span-5 lg:col-span-9 relative">
             <Swiper className="!overflow-visible !static" swiperSettings={swiperSettingsJSON}>
