--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,15 +6,21 @@ import CaseStudies from "@components/modules/CaseStudies.astro";
 import Skills from "@components/modules/Skills.astro";
 import CV from "@components/modules/CV.astro";
 import Game from "@components/modules/Game.astro";
+import ShortFacts from "@components/modules/ShortFacts.astro";
+import Services from "@components/modules/Services.astro";
+import Collaboration from "@components/modules/Collaboration.astro";
 ---
 
 <Layout title="Marvin Schmidt Codes - Startseite">
     <HeroIntro />
     <AnchorNavigation />
-    <CaseStudies />
+    <Services/>
+    <ShortFacts/>
+    <!--<CaseStudies /> -->
     <Skills />
     <CV />
     <Game/>
+    <Collaboration/>
 </Layout>
 
 
