--- a/src/styles/theme/index.css
+++ b/src/styles/theme/index.css
@@ -30,6 +30,7 @@
     --font-primary:                 "Poppins", Arial, sans-serif;
     --font-secondary:               "Space Grotesk", "Times New Roman", serif;
 
+    --text-12:                      0.75rem;
     --text-16:                      1rem;
     --text-18:                      1.125rem;
     --text-20:                      1.25rem;
