--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -1,6 +1,7 @@
 ---
 import Image from "@components/partials/Image.astro";
 import Button from "../partials/Button.astro";
+import Flag from "@components/partials/Flag.astro";
 ---
 
 <section class="hero-intro module !mb-95 lg:!mb-160" aria-labelledby="hero-intro-title" role="region">
@@ -36,6 +37,7 @@ import Button from "../partials/Button.astro";
             </div>
         </figure>
         <div class="col-span-5 mt-30 lg:col-start-7 lg:mt-0">
+            <Flag>Über mich</Flag>
             <h1 class="text-green mb-15" id="hero-intro-title" data-scroll-reveal>Frontend Developer.</h1>
             <p class="mt-9 lg:mt-30" data-scroll-reveal>
                 Mit Fokus auf <strong>Performance</strong>, <strong>Accessibility</strong> und <strong>sauberen Code</strong>
