--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,8 @@ const currentPageUrl = Astro.url;
 
         <link rel="canonical" href={currentPageUrl}>
 
+        <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/ae334739f32918479c72d8391642d48e.js"></script>
+
         <link rel="preload" href="/fonts/poppins-v24-latin/poppins-v24-latin-200.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/fonts/poppins-v24-latin/poppins-v24-latin-200italic.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/fonts/poppins-v24-latin/poppins-v24-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
@@ -44,7 +46,6 @@ const currentPageUrl = Astro.url;
         <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 
 		<title>{title}</title>
-        <script is:inline type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/ae334739f32918479c72d8391642d48e.js"></script>
 	</head>
 	<body class="font-primary bg-main-background text-white font-extralight text-xl lg:text-2xl leading-28 lg:leading-32">
         <SiteHeader/>
