updated cookie script styles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,8 +49,15 @@ const currentPageUrl = Astro.url;
 
         <style is:inline>
         #cookiescript_accept {
-        color: #1C1C1C !important;
-    }
+            color: #1C1C1C !important;
+            border-radius: 0 !important;
+        }
+        #cookiescript_reject {
+            border-radius: 0 !important;
+        }
+        #cookiescript_injected {
+            border-radius: 0 !important;
+        }
         </style>
 	</head>
 	<body class="font-primary bg-main-background text-white font-extralight text-xl lg:text-2xl leading-28 lg:leading-32">
