--- a/src/components/base/SiteFooter.astro
+++ b/src/components/base/SiteFooter.astro
@@ -15,9 +15,16 @@ import Button from "@components/partials/Button.astro";
     </div>
     <hr class="my-45 lg:my-65 lg:mb-10">
     <div class="grid text-center text-16">
-        <div class="col-span-6 lg:text-left">
-            <a class="inline-block leading-38" href="/impressum">Impressum</a>
-        </div>
+        <nav class="col-span-6 lg:text-left">
+            <ul class="flex justify-center lg:justify-start">
+                <li class="mx-7 lg:ml-0">
+                    <a class="inline-block leading-38" href="/impressum">Impressum</a>
+                </li>
+                <li class="mx-7 lg:mx-0">
+                    <a class="inline-block leading-38" href="/datenschutz">Datenschutzrichtlinien</a>
+                </li>
+            </ul>
+        </nav>
         <div class="col-span-6 mt-5 lg:text-right">
             © 2025 Marvin Schmidt Codes
         </div>
