--- a/src/components/modules/ShortFacts.astro
+++ b/src/components/modules/ShortFacts.astro
@@ -11,15 +11,15 @@ import Flag from "@components/partials/Flag.astro";
     <ol class="grid lg:text-center">
         <li data-scroll-reveal class="col-span-12 lg:col-span-4 mb-40 after:content-[''] after:block after:h-1 after:w-90 lg:after:m-auto after:mt-30 lg:after:hidden  after:bg-white">
             <div class="text-48 lg:text-96 mb-10 lg:mb-40"><span data-count-up-number="9" class="inline-block w-30 lg:w-60">9</span>+</div>
-            <div class="font-bold">Jahre Erfahrung <br> im Frontend Development</div>
+            <div class="">Jahre Erfahrung <br> im Frontend-Development</div>
         </li>
         <li data-scroll-reveal class="col-span-12 lg:col-span-4 mb-40 after:content-[''] after:block after:h-1 after:w-90 lg:after:m-auto after:mt-30 lg:after:hidden  after:bg-white">
             <div class="text-48 lg:text-96 mb-10 lg:mb-40"><span data-count-up-number="75" class="inline-block w-54 lg:w-108">75</span>+</div>
-            <div class="font-bold">Umgesetzte <br> Design-Systeme</div>
+            <div class="">Umgesetzte <br> Design-Systeme</div>
         </li>
         <li data-scroll-reveal class="col-span-12 lg:col-span-4">
             <div class="text-48 lg:text-96 mb-10 lg:mb-40"><span data-count-up-number="800000" class="inline-block w-180 lg:w-360">800000</span>+</div>
-            <div class="font-bold">Zeilen <br> Code geschrieben</div>
+            <div class="">Zeilen <br> Code geschrieben</div>
         </li>
     </ol>
 </div>
